dialog: Prevent hyphenation in Codex messages
Why:

- According to designs, text should not be hyphenated in Codex message
  boxes used by the IRS, but should only break at suitable word break
  points.

What:

- Introduce and use a shared style for Codex message box contents in the
  dialog.

Bug: T381132

--- a/resources/ext.reportIncident/ext.reportincident.less
+++ b/resources/ext.reportIncident/ext.reportincident.less
@@ -22,3 +22,9 @@
 .ext-reportincident__success-confirmation-message {
 	text-align: initial;
 }
+
+.ext-reportincident-dialog__message {
+	hyphens: manual;
+	-ms-hyphens: manual;
+	-webkit-hyphens: manual;
+}
